--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Matīss Babris
-#logo: /assets/img/headshot_circle.png
-#description: text below image
+logo: /assets/img/DSCF5745.jpg
+description: Data Analyst & Data Scientist
 show_downloads: true
 theme: jekyll-theme-minimal
