--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Matīss Babris
-logo: /assets/img/DSCF5745.jpg
+logo: /assets/img/DSCF5745.jpg.jpg
 description: Data Analyst & Data Scientist
 show_downloads: true
 theme: jekyll-theme-minimal
