--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Matīss Babris
 logo: /assets/img/ProfilePicCircular.png
 description: Data Analyst & Data Scientist
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
